--- a/layouts/index.css
+++ b/layouts/index.css
@@ -47,7 +47,6 @@ body {
   color: #ff9d00; /* Cambiamos el color al pasar el ratón */
 }
 
-/* Estilos para la barra de búsqueda */
 .search-form {
   margin-left: 300px;
   display: flex;
@@ -83,7 +82,6 @@ body {
   background-color: #555;
 }
 
-/* Estilos para el logo */
 .logo img {
   height: 80px;
   width: auto;
@@ -105,27 +103,29 @@ body {
 }
 
 .video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Hace que el video mantenga la relación de aspecto y cubra todo el contenedor */
-    margin: 0; /* Elimina cualquier posible margen */
-  }
-  
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Hace que el video mantenga la relación de aspecto y cubra todo el contenedor */
+  margin: 0; /* Elimina cualquier posible margen */
+}
 
 .contenido-superpuesto {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #ff9d0094; /* Fondo más opaco */
+  background-color: #9e9d9c94; /* Fondo más opaco */
   padding: 30px; /* Incrementamos el espacio alrededor del contenido */
   text-align: center;
   font-family: "Nanum Myeongjo", serif;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.878); /* Agregamos una sutil sombra */
   border-radius: 10px; /* Redondeamos las esquinas */
 }
+.contenido-superpuesto:hover {
+  background-color: #ff9d00;
 
-/* ... tus estilos existentes ... */
+  transition: background-color 0.3s, color 0.3s;
+}
 .caja-contenido {
   position: absolute;
   top: 70%;
@@ -136,12 +136,26 @@ body {
   font-family: "Nanum Myeongjo", serif;
   text-decoration: none;
   color: #fff;
-  background-color: rgba(9, 48, 20, 0.738);
+  background-color: rgb(0, 0, 0);
   border-radius: 10px;
   transition: background-color 0.3s, color 0.3s;
   cursor: pointer;
   text-transform: uppercase;
   font-weight: bold;
+}
+.caja-contenido {
+  /* Tus estilos existentes aquí... */
+
+  /* Estilo predeterminado */
+  background-color: rgb(0, 0, 0);
+
+  /* Transición de color para suavizar el cambio */
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.caja-contenido:hover {
+  /* Cambio de color al pasar el mouse */
+  background-color: #ff9d00; /* Cambia el color a rojo al pasar el mouse */
 }
 
 .boton {
@@ -149,4 +163,3 @@ body {
   color: white; /* Color del texto */
 }
 
-/* Estilos para la sección */
